  ``paste.config.DispatchingConfig``.

* Make test response ``.form`` attribute work when you have a single
  named form.

* Try to encode any unicode input to ``paste.auth.auth_tkt``

* ``paste.wsgiwrappers.WSGIResponse`` now has a ``.content_type``
  attribute (that does not include parameters), and a ``.charset``
  attribute (that gets the charset parameter).

1.4
---

* In ``paste.httpserver`` added lots of functionality to the
  threadpool.  See `the paste.httpserver threadpool documentation
  <paste-httpserver-threadpool.html>`_ for details.  This catches
  worker threads (and WSGI apps) that take too long to complete their
  task; killing them eventually, adding more worker threads when the
  pool is exhausted and it doesn't look good that it'll clear soon,
  and optionally killing the process when there are too many
  lost/zombie threads (you must be using some kind supervisor process
  for this last response to make sense).

* Save host and scheme information during real HTTP proxy requests to
  ``paste.httpserver``, into the keys
  ``paste.httpserver.proxy.scheme`` and
  ``paste.httpserver.proxy.host``

* In ``paste.exceptions`` always call ``start_response``; may help
  problems when there is an exception in ``start_response`` itself.

* Added method to ``paste.registry.StackedObjectProxy``,
  ``_object_stack()``, which returns a list of all the registered
  objects.  Useful if you want to search through the effective history
  of a stacked object.

* Fixed infinite recursion problem with
  ``paste.request.EnvironHeaders.keys()``.

* Fix ``paste.wsgiwrappers.WSGIRequest.urlvars`` to use
  ``wsgiorg.routing_args``

* Remove port from ``paste.request.construct_url`` if it's the default
  port (e.g., port 80 for ``http``).

* ``paste.proxy`` works with headers with continuations in the
  response (i.e., a header that spans multiple lines).  Also, treat a
  missing Content-Length as 0, not unlimited (may have previously